# GoodShyt-Core

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GoodShyt Core  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  ethics-review.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
assets/brand/: asset-manifest.md  palette.md  typography.md
docs/: api.md  architecture.md  branding.md  ethics.md  index.md  quickstart.md  roadmap.md
metadata/: release-checklist.md  repo-summary.md  social-copy.md  topics.txt
policies/: baseline.yaml
src/goodshyt_core/: __init__.py  api.py  cli.py  metrics.py  models.py  policies.py  protocols.py
tests/: test_metrics.py  test_protocols.py
